fix the button shift bug

--- a/css/albertzy.css
+++ b/css/albertzy.css
@@ -98,9 +98,6 @@
 
 .form-button:hover{
     animation: pulse 1s ease-out infinite;
-    box-shadow: 0 0 0 100em rgba(#fff,0);
-    display: block;
-    transition: all 0.8s
 }
 
 .form-button:after {
